# reflex-train

./: .gitignore  pyproject.toml  rxconfig.py
navigation/: routes.py  state.py
pages/: __init__.py  about.py  contact.py  pricing.py
reflex_train/: reflex_train.py
reflex_train/blog/: __init__.py  add.py  detail.py  edit.py  forms.py  list.py  model.py  state.py
reflex_train/contact/: __init__.py  form.py  model.py  page.py  state.py
reflex_train/navigation/: routes.py  state.py
reflex_train/pages/: __init__.py  about.py  contact.py  pricing.py
reflex_train/ui/: nav.py
reflex_train/utils/: __init__.py  timing.py
ui/: base.py  nav.py
