[tool.poetry]
name = "reflex-train"
version = "0.1.0"
description = ""
authors = ["Dr Muhammad Naufal <117550441+drmayu7@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
reflex = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
